[package]
name = "sqlite-ll"
version = "0.1.0"
authors = [
    "John-John Tedro <udoprog@tedro.se>"
]
edition = "2021"
rust-version = "1.63"
description = "Low-level interface to the SQLite database"
documentation = "https://docs.rs/sqlite-ll"
readme = "README.md"
homepage = "https://github.com/udoprog/sqlite-ll"
repository = "https://github.com/udoprog/sqlite-ll"
license = "MIT OR Apache-2.0"
keywords = ["database"]
categories = ["api-bindings", "database"]

[features]
default = ["linkage"]
linkage = ["sqlite3-sys/linkage"]

[dependencies]
libc = "0.2.141"

[dependencies.sqlite3-sys]
version = "0.14.0"
default-features = false

[dev-dependencies]
criterion = "0.4.0"
temporary = "0.6.4"

[[bench]]
name = "statement_benches"
harness = false
